--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,8 +70,8 @@
     <string name="empty_view_no_finished_summary">You currently have no finished tasks. Every task you marked as finished will show here.</string>
     <string name="empty_view_no_logs_title">No Recorded Logs</string>
     <string name="empty_view_no_logs_summary">Once a task, event or any reminder appear at your notification shade, it will also appear here.</string>
-    <string name="empty_view_no_events_title">No Scheduled Events</string>
-    <string name="empty_view_no_events_summary">You currently have no scheduled events. If you have one, add it using the button below.</string>
+    <string name="empty_view_no_events_title">No Scheduled Tasks</string>
+    <string name="empty_view_no_events_summary">You currently have no scheduled Tasks. If you have one, add it on the "Tasks" tab.</string>
     <string name="empty_view_no_previous_title">No Previous Events</string>
     <string name="empty_view_no_previous_summary">You currently have no previous events. Every event that is past its schedule will appear here</string>
     <string name="empty_view_no_archived_tasks">No Archived Tasks</string>
@@ -118,7 +118,7 @@
     <string name="dialog_select_file_import">Select file to import</string>
     <string name="dialog_send_to">Send to</string>
     <string name="dialog_sharing_options">Sharing options</string>
-    <string name="dialog_class_schedules">Class Schedules</string>
+    <string name="dialog_category_tasks">Saved Tasks:</string>
     <string name="dialog_filter_options">Filter Options</string>
     <string name="dialog_new_attachment">New Attachment</string>
     <string name="dialog_attachment_name">@string/field_attachment_name</string>
@@ -150,7 +150,7 @@
     <string name="field_subject">Subject</string>
     <string name="field_due_date">Due Date</string>
     <string name="field_event_name">Event Name</string>
-    <string name="field_schedule">Schedule</string>
+    <string name="field_category">Category</string>
     <string name="field_location">Location</string>
     <string name="field_attachments">Attachments</string>
     <string name="field_class_time">Class Time</string>
@@ -170,7 +170,7 @@
     <string name="hint_event_location">Enter a room, a building or any place</string>
     <string name="hint_event_notes">Some ideas or minor details about the event</string>
 
-    <string name="feedback_subject_removed">Subject removed</string>
+    <string name="feedback_category_deleted">Category deleted</string>
     <string name="feedback_log_removed">Log removed</string>
     <string name="feedback_task_removed">Task removed</string>
     <string name="feedback_schedule_removed">Schedule removed</string>
@@ -179,7 +179,7 @@
     <string name="feedback_event_removed">Event removed</string>
     <string name="feedback_task_marked_as_finished">Task marked as finished</string>
     <string name="feedback_task_marked_as_pending">Task marked as pending</string>
-    <string name="feedback_subject_empty_name">You forgot to enter the subject code</string>
+    <string name="feedback_category_empty_name">You forgot to enter the category name</string>
     <string name="feedback_subject_empty_description">You forgot to enter the description</string>
     <string name="feedback_subject_no_schedule">You forgot to add a schedule</string>
     <string name="feedback_schedule_empty_days">You forgot to specify the days</string>
