App logo & name change + Firebase Integration
I changed the app name + logo and also started with the firebase integration by adding dependencies and etc. The data is still saved locally so no database code has been added or changed yet though.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string translatable="false" name="app_name">Fokus</string>
+    <string translatable="false" name="app_name">ClockWork</string>
 
     <string name="shortcut_add_task">@string/button_add_task</string>
     <string name="shortcut_add_event">@string/button_add_event</string>
